css/page.workingfile.css
/* ... */
@media only screen and (min-width: 480px) and (max-width: 599px) {
    .views-slideshow-controls-bottom {
    position: absolute;
    top: 195px;
    right: 5px;
    padding: 0;
    z-index: 200;
  }
  #google {
    width: 70%;
  }
  #views_slideshow_cycle_main_slideshow_banner-block {
    height: 250px;
  }

  .cta-img {
    height: auto;
  }
  .cta-wrap img {
    width: 100%;
  }
 
  .region-sidebar-second .view-cta-sidebar {
    margin-right: 0 .5em 0 0;
  }
  .description {
    margin-top: -3px;
  }
}

/*fixes width of messages under CTA being the size of the box*/
@media only screen and (min-width: 480px) and (max-width: 768px) {
  .cta-wrap, .view-cta-homepage .views-row { 
    width: 230px;
    float: left;
    margin-right: 20px;}

  .front .view-cta-homepage .views-row-1,
  .front .view-cta-homepage .views-row-3,
  .front .view-cta-homepage .views-row-5,
  {
    margin-right:20px;
  }



#main-content, .region-sidebar-second {
    padding: 0 .5em;
  }


}



/* banner image */

  #block-views-slideshow-banner-block img { width:100% !important}
}
@media only screen and (min-width: 600px) and (max-width: 799px) {
  .cta-wrap {
    float: left;
    margin-right: 2%;
    /*width: 210px;*/
  }
  .cta-img {
    /*height: 126px;*/
  }
  #menu-bar ul li {
    /*width: 25%; we don't need this effect on buttons for tablet*/
    border-bottom: 1px solid #fff;
    border-top: none;
  }
      .views-slideshow-controls-bottom {
    position: absolute;
    top: 195px;
    right: 5px;
    padding: 0;
    z-index: 200;
  }

}
@media only screen and (min-width: 600px) {
  /* TOP MENU */
  .js .slicknav_menu {
    display: none;
  }
  /*#menu-bar ul.slimmenu li .sub-collapser {display: none;}*/
  #menu-bar {
    background: #fff;
    padding-left: 0;
  }
  #menu-bar ul li {
    float: left;
  }
  #menu-bar a {
    color: #002554;
    display: block;
    font-weight: bold;
    font-size: 14px;
    font-size: 1.4rem;
    line-height: 20px;
    padding: 12px 12px 8px 12px;
  }
  #menu-bar .sf-item-1 a {
    background: url(images/home_btn_20x50.png) no-repeat 10px 10px;
    text-indent: -99999px;
    width: 19px;
  }
  #menu-bar .sf-item-1 a:hover {
    background: url(images/home_btn_20x50.png) no-repeat 10px 10px;
    text-indent: -99999px;
    width: 19px;
  }
  #menu-bar .sf-item-1 a.active {
    background: url(images/home_btn_20x50.png) no-repeat 10px 10px;
    text-indent: -99999px;
    width: 19px;
  }
  #menu-bar ul li ul li {
    border-bottom: 1px solid #e6e4e2;
  }
  #menu-bar ul li ul li.sf-depth-2 a {
    background: #ddd8a9;
    text-indent: 0;
  }
  #menu-bar ul li ul li.sf-depth-2 a:hover,
  #menu-bar ul li ul li.sf-depth-2 a.active {
    background: #bfb800;
    text-indent: 0;
  }
  /* Arrows for children menu indication*/
  #menu-bar .sf-depth-2 a.menuparent {
    background: #ddd8a9 url('images/menu-collapsed.png') right 18px no-repeat;
  }
  #menu-bar .sf-depth-2 li a.menuparent {
    padding-right: 5px;
  }
  #menu-bar .sf-depth-2 .menuparent:hover,
  #menu-bar ul li ul li a.menuparent:active {
    background: #bfb800 url('images/menu-collapsed.png') right 18px no-repeat;
  }
  /* ----------------------
  		HOMEPAGE BANNER
  		---------------------- */
  .banner-description {
    color: #ffffff;
    background: #000;
    position: absolute;
    padding: 10px;
    padding-bottom: 0;
    bottom: 16px;
    left: 20px;
    filter: alpha(opacity=90);
    opacity: 0.9;
    width: 420px;
  }
  .banner-description p {
    font-size: 15px;
    font-size: 1.5rem;
  }
  #views_slideshow_cycle_main_slideshow_banner-block {
    position: relative;
  }
  /*Portrait Slider styles*/
  .region-sidebar-second .banner-description {
    width: 210px;
    position: relative;
    left: 0;
    bottom: 5px;
    padding-bottom: 10px;
    background: #e0e4d2;
    color: #333333;
  }
  .region-sidebar-second .banner-description h2 {
    color: #002554;
  }
  .field-name-body img {
    max-width: 250px;
  }
  /* If taken out img shrink to 5px by 5px. See http://www-dev.utsc.utoronto.ca/mgmt/getting-involved*/
  .field-name-body img.full-width {
    max-width: none;
  }
  .two-sidebars #main-content {
    margin: 20px 2% 0 2%;
    width: 500px;
    float: left;
  }
}
@media only screen and (min-width: 768px) and (max-width: 998px) {
  #menu-bar a {
    font-size: 12px;
    font-size: 1.2rem;
  }
  .sidebar-second #main-content {
    width: 92%;
  }
  .sidebar-first #main-content {
    width: 90%;
  }
  #columns .region-sidebar-second {
    width: 24%;
    margin-left: -25%;
  }
}

/* fixes no margin for the 3rd (green) CTA on homepage main page area on responsive*/
@media only screen and (min-width: 600px) and (max-width: 998px) {
.front .region-content .view-cta-homepage .views-row-3 { margin-top:20px; margin-right:3.2%;}
}
/* ... */

